--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "doc": "docs"
   },
   "scripts": {
-  "test": "node --experimental-vm-modules ./node_modules/.bin/jest",
+   "test": "cross-env NODE_ENV=test jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -19,12 +19,11 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0"
   },
-  "type": "module",
-  "jest": {
-    "transform": {}
-  }
+  "type": "module"
+  
 }
