--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
